--- a/Request.Response.Middleware.Library/Request.Response.Middleware.Library.csproj
+++ b/Request.Response.Middleware.Library/Request.Response.Middleware.Library.csproj
@@ -2,8 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-	<LangVersion>10</LangVersion>  
+	<LangVersion>10</LangVersion>
+	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
+	<PackageVersion>1.0.0</PackageVersion>
+	<PackageId>Cengiz.Request.Response.Middleware</PackageId>
+	<Authors>Oguzhan Cengiz</Authors>
+	<Company>Oguzhan Cengiz</Company>
+	<Description>This package is built for handling and managing Request and Response for WEB API projects.</Description>
+	<PackageProjectUrl>https://github.com/oguzhanet</PackageProjectUrl>
+	<RepositoryUrl>https://github.com/oguzhanet/Request.Response.Middleware</RepositoryUrl>
+	<PackageTags>Request;Response;Middleware;</PackageTags>  
   </PropertyGroup>
+
+	<ItemGroup>
+		<None Include="License/LICENSE.txt" Pack="true" PackagePath="" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
